<resources>
    <string name="app_name">Mobile Agent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prospect">Prosepect(2019)</string>
    <string name="premium">Premium</string>
    <string name="number1">300</string>
    <string name="number2">10000000</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="product_sales">Product and SAles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="make_payment">Make payment</string>
    <string name="pending_payments">Pending Payments</string>
    <string name="cashout">Cashout</string>
    <string name="your_current_cash_limit_is_50_000_00">Your current cash limit is 50,000.00</string>
    <string name="policy_number">Policy Number</string>
    <string name="amount_ceated">Amount Ceated</string>
    <string name="close">close</string>
    <string name="transaction_succesful">Transaction succesful</string>
    <string name="activities">Activities</string>
    <string name="detail">Detail</string>
</resources>
